deployment/kubernetes/go-infra_env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-infra
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-infra
  template:
    metadata:
      labels:
        app: go-infra
    spec:
      containers:
        - name: go-infra
          image: ghcr.io/babbage88/go-infra:v1.1.3
          imagePullPolicy: Always
          ports:
            - containerPort: 8993
          command: ["/app/server"]
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
      imagePullSecrets:
        - name: ghcr
