deployment/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-infra-service
spec:
  allocateLoadBalancerNodePorts: false
  selector:
    app: go-infra
  ports:
  - protocol: TCP
    port: 8993
    targetPort: 8993
  - protocol: TCP
    port: 8090
    targetPort: 8090
  type: LoadBalancer
